@startuml ClassDiagram
title Hình 2.12 — Sơ đồ lớp (NoSQL — MongoDB Atlas): 11 collection + 4 lớp nhúng

skinparam dpi 150
skinparam shadowing false
skinparam defaultFontName "Segoe UI"
skinparam defaultFontSize 12
skinparam classAttributeIconSize 0
skinparam linetype ortho
skinparam class {
  BackgroundColor #FFFFFF
  BorderColor #3A5BC7
  HeaderBackgroundColor #EEF3FC
}
skinparam package {
  BackgroundColor #FBFCFE
  BorderColor #9DB2D6
}

package "1 · Người dùng & Vai trò" {
  class User {
    +_id : ObjectId
    +hoTen : String
    +email : String <<unique>>
    +matKhau : String <<bcrypt>>
    +sdt : String
    +vaiTro : {admin, manager, tenant}
    +trangThai : {active, inactive, locked, pending}
    +maNhaTroIds : ObjectId[]
    --
    +register()
    +login()
    +verifyOtp()
    +forgotPassword()
    +resetPassword()
    +updateProfile()
    +lockUnlock()
  }
  class ThongTinKhachThue <<Embedded>> {
    +cccd : String
    +ngheNghiep : String
    +diaChiThuongTru : String
  }
  class Otp <<Embedded>> {
    +maOtp : String
    +hanSuDung : Date
  }
  User *-- "0..1" ThongTinKhachThue
  User *-- "0..1" Otp
}

package "2 · Nhà trọ & Phòng" {
  class Property {
    +_id : ObjectId
    +maNhaTro : String <<unique>>
    +tenNhaTro : String
    +diaChi, quanHuyen, thanhPho : String
    +hinhAnh : String
    +qrCodeUrl : String
    +tongSoPhong, soPhongDaThue : Number
    +maQuanLyIds : ObjectId[]
    +maChuTroId : ObjectId
    +trangThai : {active, inactive}
    --
    +createProperty()
    +updateProperty()
    +deactivateProperty()
    +assignManager()
  }
  class RoomType {
    +_id : ObjectId
    +maNhaTroId : ObjectId
    +tenLoai : String
    +dienTich, giaCoBan : Number
    +tienNghi : String[]
    --
    +createRoomType()
    +updateRoomType()
    +deleteRoomType()
  }
  class Room {
    +_id : ObjectId
    +maNhaTroId, maLoaiPhongId : ObjectId
    +soPhong, maPhong : String
    +tang : Number
    +giaThueHienTai, giaThue, dienTich : Number
    +trangThai : {empty, rented, deposit, maintenance}
    +hinhAnh : String[]
    +moTa : String
    +depositAt : Date
    --
    +createRoom()
    +updateRoom()
    +deleteRoom()
    +updateStatus()
    +addDeposit()
    +searchRooms()
  }
  class TaiSan <<Embedded>> {
    +tenTaiSan : String
    +giaTri : Number
    +tinhTrang : String
  }
  Property "1" o-- "0..*" RoomType
  Property "1" o-- "0..*" Room
  RoomType "1" o-- "0..*" Room
  Room *-- "0..*" TaiSan
}

package "3 · Hợp đồng" {
  class Contract {
    +_id : ObjectId
    +maPhongId : ObjectId
    +maKhachThueIds : ObjectId[]
    +ngayBatDau, ngayKetThuc : Date
    +tienCoc : Number
    +trangThai : {draft, active, expired, terminated}
    +duongDanPdf : String
    --
    +createContract()
    +updateContract()
    +terminate()
    +extend()
    +esign()
    +exportPDF()
  }
  Room "1" o-- "0..*" Contract
}

package "4 · Dịch vụ & Hoá đơn" {
  class Service {
    +_id : ObjectId
    +maNhaTroId : ObjectId
    +tenDichVu, donVi : String
    +donGia : Number
    +loaiTinh : {metered, fixed}
    --
    +createService()
    +updateService()
    +deleteService()
  }
  class Reading {
    +_id : ObjectId
    +maPhongId, maDichVuId : ObjectId
    +kyThanhToan : String <<YYYY-MM>>
    +chiSoCu, chiSoMoi, tieuThu : Number
    --
    +saveReadings()
    +getReadings()
  }
  class Invoice {
    +_id : ObjectId
    +maHopDongId, maPhongId : ObjectId
    +kyThanhToan : String
    +tongTien : Number
    +hanThanhToan : Date
    +trangThai : {pending, pending_cash, paid, overdue, cancelled}
    +paymentMethod : {vnpay, cash, bank_transfer}
    --
    +generateInvoices()
    +pay()
    +confirmCash()
    +rejectCash()
    +exportPDF()
  }
  class ChiTietHoaDon <<Embedded>> {
    +maDichVuId : ObjectId
    +tenDichVu : String
    +soLuong, donGia, thanhTien : Number
  }
  class Payment {
    +_id : ObjectId
    +maHoaDonId : ObjectId <<0..1>>
    +maPhongId : ObjectId <<0..1>>
    +phuongThuc : {vnpay, momo, cash, bank_transfer}
    +soTien : Number
    +ngayGiaoDich : Date
    +trangThai : {pending, success, failed}
    +ghiChu : String
    --
    +createPaymentUrl()
    +verifyCallback()
  }
  class Expense {
    +_id : ObjectId
    +maNhaTroId : ObjectId
    +tenChiPhi : String
    +soTien : Number
    +danhMuc : {sua_chua, bao_tri, dien_nuoc_chung, dich_vu_ngoai, khac}
    +ngayChi : Date
    +ghiChu : String
    --
    +createExpense()
    +deleteExpense()
    +getExpenses()
  }
  Property "1" o-- "0..*" Service
  Property "1" o-- "0..*" Expense
  Room "1" o-- "0..*" Reading
  Service "1" o-- "0..*" Reading
  Contract "1" o-- "0..*" Invoice
  Room "1" -- "0..*" Invoice
  Invoice *-- "1..*" ChiTietHoaDon
  ChiTietHoaDon "0..*" -- "0..1" Service : dịch vụ tham chiếu
  Invoice "0..1" o-- "0..*" Payment
  Room "0..1" -- "0..*" Payment : đặt cọc giữ phòng
}

package "5 · Thông báo" {
  class Notification {
    +_id : ObjectId
    +maNguoiDungId : ObjectId
    +tieuDe, noiDung : String
    +kenh : {email, telegram, push}
    +daDoc : Boolean
    --
    +sendNotification()
    +markAsRead()
  }
  User "1" o-- "0..*" Notification
}

' ══ Quan hệ liên gói với Người dùng ══
Contract "0..*" -- "1..*" User : khách thuê đứng tên >
User "0..1" -- "0..*" Property : chủ sở hữu >
User "0..*" -- "0..*" Property : được phân công quản lý >

note as N_Legend
  **Quy ước**: hình thoi đặc (composition) = tài liệu **nhúng** trong collection cha;
  hình thoi rỗng / đường thường = **tham chiếu** ObjectId giữa các collection.
  Mọi collection đều có thêm createdAt / updatedAt (tự sinh).
end note

note bottom of Notification
  v1 dùng kênh **email** (Gmail SMTP) và **in-app** (push = thông báo trong app);
  giá trị 'telegram' để dành cho v2.
end note

note bottom of Payment
  Giao dịch **đặt cọc giữ phòng** của khách vãng lai gắn với Phòng
  (không có hoá đơn) — vì vậy liên kết tới Hoá đơn là tuỳ chọn (0..1).
end note

@enduml
